--- a/index.html
+++ b/index.html
@@ -525,10 +525,10 @@
       <h1>پلتفرم نوآورانه برای پیوند دنیای سینما و کسب‌وکار</h1>
       <p>سینما‌لینک پل ارتباطی هوشمند میان فعالان صنعت سینما و برندهای تجاری برای همکاری‌های مؤثر و تبلیغات خلاقانه</p>
       <div class="buttons">
-        <a href="register-director.html" class="btn btn-primary">
+        <a href="form_register_director.html" class="btn btn-primary">
           <i class="fas fa-film"></i> ثبت‌نام کارگردانان
         </a>
-        <a href="register-company.html" class="btn btn-secondary">
+        <a href="form_register_producer.html" class="btn btn-secondary">
           <i class="fas fa-briefcase"></i> ثبت‌نام شرکت‌ها
         </a>
       </div>
