--- a/index.html
+++ b/index.html
@@ -499,7 +499,6 @@
   <!-- هدر -->
   <header>
     <div class="container header-content">
-      <div class="logo">سینما‌لینک</div>
       
       <div class="menu-icon" id="menuIcon">
         <div></div>
@@ -516,6 +515,8 @@
           <li><a href="#">تماس با ما</a></li>
         </ul>
       </nav>
+      <div class="logo">سینما‌لینک</div>
+
     </div>
   </header>
 
@@ -590,10 +591,10 @@
       <h2>آماده همکاری هستید؟</h2>
       <p>همین حالا به جامعه حرفه‌ای سینما‌لینک بپیوندید و از فرصت‌های بی‌نظیر همکاری با صنعت سینما بهره‌مند شوید</p>
       <div class="buttons">
-        <a href="register-director.html" class="btn btn-primary">
+        <a href="form_register_director.html" class="btn btn-primary">
           <i class="fas fa-film"></i> ثبت‌نام کارگردانان
         </a>
-        <a href="register-company.html" class="btn btn-secondary">
+        <a href="form_register_producer.html" class="btn btn-secondary">
           <i class="fas fa-briefcase"></i> ثبت‌نام شرکت‌ها
         </a>
       </div>
