--- a/form_register_producer.html
+++ b/form_register_producer.html
@@ -433,7 +433,7 @@
       // ارسال اطلاعات به سرور (شبیه‌سازی)
       setTimeout(() => {
         // پس از موفقیت‌آمیز بودن ثبت‌نام، کاربر را به صفحه جدید هدایت کنید
-        window.location.href = 'director_panel.html'; // نام صفحه جدید
+        window.location.href = 'producer_panel.html'; // نام صفحه جدید
       }, 1500); // تأخیر برای شبیه‌سازی ارسال اطلاعات
       });
   </script>
